[FIX] removendo overflow x

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -4,7 +4,7 @@
   overscroll-behavior-y: contain;
   scroll-snap-type: y mandatory;
   overflow-x: hidden;
-    overflow-y: hidden;
+
   height: 100vh;
   width: 100%;
   -ms-overflow-style: none;
@@ -674,7 +674,7 @@
 }
 
 
-@media (min-width: 249px) and (max-width: 340px) {
+@media (min-width: 100px) and (max-width: 340px) {
   
   .section1{
     .content{
@@ -703,10 +703,3 @@
   }
   
 }
-
-@media (min-width: 249px){
-
-
-}
-
-
