--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -33,6 +33,8 @@ body{
   color: var(--gray-900);
   -webkit-font-smoothing: antialiased;
   overflow-y: hidden;
+  overflow-x: hidden;
+
 }
 
 button{
